[b][color=orange]v4.04[/color], 12.12.2018[/b][list]
[*]Fixed an error in the LFGList skin.
[*]Updated SpellBook skin.[/list]

[b][color=orange]v4.03[/color], 11.12.2018[/b][list]
[*]Update new ChatBar position and size.
[*]Removed Enhanced FriendsList. Get ProjectAzilroka.
[*]Fix Keystone Info tooltip.
[*]Added iLvL on ScrappingMachine & EquipFlyout Buttons.
[*]Added Buff Reminder Module.[/list]

[b][color=orange]v4.02[/color], 21.11.2018[/b][list]
[*]Fixed an error in one of my ClassColor function. #38
[*]Fixed an error with DeJaCharacterStats. #39[/list]

[b][color=orange]v4.01[/color], 20.11.2018[/b][list]
[*]Small DPS/Tank Layout adjustments.
[*]Take account to the new ElvUI functions. (aborb etc.)
[*]Added new Hearthstone spells to the LocPanel.
[*]Updated the Undress Button on the CharacterFrame.
[*]Added a ChatBar with quick buttons.
[*]Added a Quest Notifier.
[*]A lot of skin updates.[/list]

[b][color=orange]v4.00[/color], 05.10.2018[/b][list]
[*]New Layout for DPS/Tank Profile.
[*]Updated BigWigs/Details/Masque Profile.
[*]Updated my buttonColector to be like SMB.
[*]Added mouseover options for EquipBar & SpecBar.
[*]A lot skin updates.[/list]

[b][color=orange]v3.41.1[/color], 18.09.2018[/b][list]
[*]Fix a nil error on the NamePlate Auras.[/list]

[b][color=orange]v3.41[/color], 18.09.2018[/b][list]
[*]Added a check for the ScrappingMachine if the ElvUI bags are disabled.
[*]Adjust a bit the ArenaFrame position.
[*]Maybe a fix for a nil error on vignetteInfo.
[*]More NPCs on my GameMenu. ;)
[*]A lot skin updates.[/list]

[b][color=orange]v3.40[/color], 14.09.2018[/b][list]
[*]Code updates to NamePlate Auras.
[*]Added WarScrolls to the RaidBuffs.
[*]Update ProjectAzilroka compatibily.
[*]Added back DBM skin. I only touch the Range/Info Frame.
[*]Fixed an error in the RaidUI skin.
[*]Added back the install steps for the AddOns.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.39[/color], 08.09.2018[/b][list]