@@ -1,6 +1,8 @@
-** v4.03, 12.12.2018**
+** v4.03, 13.12.2018**
 * Fixed an error in the LFGList skin.
 * Updated SpellBook skin.
+* Use my arrows on the StackSplitFrame again.
+* Disable my ShadowOverlay by default for now.
 
 ** v4.03, 11.12.2018**
 * Update new ChatBar position and size.
